--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .orb-canvas {
-  background-image: url("https://th.bing.com/th/id/OIP.wy-3LCoLXp1iIv66JbQGXQHaE8?rs=1&pid=ImgDetMain");
+  background-image: url("blob:https://web.whatsapp.com/a47e9532-7bb0-4f2c-81d9-6cfaa548290a");
   opacity: 0.9;
   background-size: cover;
 }
