--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .orb-canvas {
-  background-image: url("blob:https://web.whatsapp.com/a47e9532-7bb0-4f2c-81d9-6cfaa548290a");
+  background-image: url("https://wall.alphacoders.com/big.php?i=443665");
   opacity: 0.9;
   background-size: cover;
 }
