--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .orb-canvas {
-  background-image: url("https://wall.alphacoders.com/big.php?i=443665");
+  background-image: url("https://akm-img-a-in.tosshub.com/indiatoday/images/story/201707/ir1_647_070417025351.jpg?size=690:388");
   opacity: 0.9;
   background-size: cover;
 }
