--- a/style.css
+++ b/style.css
@@ -203,3 +203,16 @@ a {
     margin-bottom: 1rem;
   }
 }
+
+.powered-by {
+  position: absolute;
+  bottom: 10px;
+  right: 10px; /* Position at the right */
+  font-size: 14px;
+  color: #888;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: underline;
+}
