--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ html { font-size: 62.5% }
 
 .video_container {
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: -10;
     overflow: hidden;
 }
